chore(bankmod): scaffold parallel assembly modules
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>